@@ -5,37 +5,34 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.7</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>3.4.5</version>
+        <relativePath/>
     </parent>
     <groupId>it.pagopa.ecommerce</groupId>
     <artifactId>pagopa-ecommerce-transactions-scheduler-service</artifactId>
-    <version>1.11.0</version>
+    <version>3.0.0</version>
     <name>pagopa-ecommerce-transactions-scheduler-service</name>
     <description>pagoPA ecommerce microservice to check perform scheduled operations on transactions such as analyze
         pending transactions
     </description>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <azure.functions.java.library.version>3.0.0</azure.functions.java.library.version>
-        <spring.cloud.azure.dependencies>4.0.0</spring.cloud.azure.dependencies>
-        <pagopa-ecommerce-commons.version>1.36.0</pagopa-ecommerce-commons.version>
+        <spring.cloud.azure.dependencies>5.22.0</spring.cloud.azure.dependencies>
+        <pagopa-ecommerce-commons.version>3.0.0</pagopa-ecommerce-commons.version>
         <spotless.version>2.28.0</spotless.version>
-        <jacoco.version>0.8.8</jacoco.version>
-        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
-        <kotlin.version>1.6.21</kotlin.version>
-        <kotlinx-coroutines.version>1.6.2</kotlinx-coroutines.version>
+        <jacoco.version>0.8.13</jacoco.version>
+        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+        <kotlin.version>2.1.21</kotlin.version>
+        <kotlinx-coroutines.version>1.10.2</kotlinx-coroutines.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>2.0.6</slf4j.version>
-        <ecs-logging-version>1.5.0</ecs-logging-version>
+        <ecs-logging-version>1.7.0</ecs-logging-version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>com.microsoft.azure.functions</groupId>
-            <artifactId>azure-functions-java-library</artifactId>
-            <version>${azure.functions.java.library.version}</version>
-        </dependency>
         <dependency>
             <groupId>it.pagopa</groupId>
             <artifactId>pagopa-ecommerce-commons</artifactId>
@@ -64,6 +61,7 @@
         <dependency>
             <groupId>com.azure.spring</groupId>
             <artifactId>spring-cloud-azure-starter-data-cosmos</artifactId>
+            <version>5.22.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
@@ -129,12 +127,10 @@
         <dependency>
             <groupId>com.azure.spring</groupId>
             <artifactId>spring-cloud-azure-starter-integration-storage-queue</artifactId>
-            <version>4.3.0</version>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-storage-queue</artifactId>
-            <version>12.13.0</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -149,12 +145,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
         </dependency>
         <dependency>
             <groupId>co.elastic.logging</groupId>
@@ -170,6 +168,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -186,16 +185,26 @@
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>jackson-databind-nullable</artifactId>
-            <version>0.1.0</version>
+            <version>0.2.6</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>3.0.0</version>
+            <version>4.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
         </dependency>
         <dependency>
             <groupId>io.swagger</groupId>
@@ -208,12 +217,6 @@
             <version>3.0.2</version>
         </dependency>
         <dependency>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>${jacoco.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
@@ -224,7 +227,6 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <dependencyManagement>
@@ -271,7 +273,7 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>7.1.0</version>
+                <version>7.13.0</version>
                 <executions>
                     <execution>
                         <id>scheduler-service-api</id>
@@ -296,6 +298,8 @@
                                 <useSwaggerUI>false</useSwaggerUI>
                                 <reactive>true</reactive>
                                 <enumPropertyNaming>UPPERCASE</enumPropertyNaming>
+                                <useJakartaEe>true</useJakartaEe>
+                                <useSpringBoot3>true</useSpringBoot3>
                             </configOptions>
                         </configuration>
                     </execution>
@@ -378,9 +382,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>${java.version}</release>
+                    <parameters>true</parameters>
                 </configuration>
             </plugin>
             <plugin>
